# thinkgisdump

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
tests/: test_cli.py  test_geom.py
thinkgisdump/: cli.py  geom.py
