[tool.poetry]
name = "thinkgisdump"
version = "0.2.0b0"
description = "Command line tool for scraping GeoJSON from ThinkGIS sites"
authors = ["Pat Sier <pjsier@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pjsier/thinkgisdump"
homepage = "https://github.com/pjsier/thinkgisdump"
exclude = ["tests", ".github"]

[tool.poetry.scripts]
thinkgis2geojson = "thinkgisdump.cli:main"

[tool.poetry.dependencies]
python = ">=3.6.1, <4.0"
requests = "^2.27.1"
lxml = "^4.7.1"
geojson-rewind = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]
exclude = '''
/(
    \.git
  | \.pytest_cache
  | \.tox
  | \.venv
  | \.vscode
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
sections = [
  "FUTURE",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER",
]
known_first_party = ["thinkgisdump"]
skip_glob = [
  "*/.venv/*",
  "*/.pytest_cache/*",
  "*/dist/*",
  "*/build/*",
]
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
